2015-08-03  Kaz Kylheku  <kaz@kylheku.com>

	Define TXR_DBG macro when compiling debug build.

	* Makefile (dbg/%.o): Pass $(DBG_ONLY_FLAGS) to COMPILE_C_WITH_DEPS
	recipe macro.

	* configure (debug_only_flags): New macro.
	(gen_config_make): Generate DBG_ONLY_FLAGS.
	Add debug-only-flags to usage help text.

2015-08-03  Christopher Meng  <i@cicku.me>

	Custom linker flags support.

	* Makefile (PLATFORM_FLAGS): Rename to PLATFORM_CFLAGS.
	(LDFLAGS): New variable. Includes -lm and PLATFORM_CFLAGS.
	(LINK_PROG): Use $(LDFLAGS) instead of -lm.

	* configure (platform_flags): Renamed to platform_cflags.
	(platform_ldflags): New variable.
	(gen_config_make): Rename PLATFORM_CFLAGS and generate
	PLATFORM_LDFLAGS.
	Usage help text updated.

2015-08-03  Kaz Kylheku  <kaz@kylheku.com>

	Switching some globals to lexical and changing some names.

	* arith.c (arith-init): Changing *flo-...* from special to
	lexical, and adding un-earmuffed variants. The earmuffed
	versions are obsolescent.
	Adding %pi% and %e% global lexicals. Earmuffed versions are
	also made global lexical, and obsolescent.

	* eval.c (lookup_global_var, lookup_global_var_l): New functions.
	(lookup_var): Uses lookup_global_var.
	(reg_varl): New function.
	(reg_var): Uses reg_var.
	(eval_init): Register global lexicals user-package, system-package
	and keyword-package. Old symbols with earmuffs are obsoleted,
	and also turned into global lexicals.
	(top-vb, top-fb): Changed to lexical.

	* eval.h (lookup_global_var, lookup_global_var_l, reg_varl):
	Declared.

	* genvim.txr: Scan ver.tl so that the lib-version variable
	is included. Extract reg_varl calls.

	* glob.c (glob_init): glob-err and other variables made lexical.

	* lib.c (get_user_package, get_system_package, get_keyword_package):
	Use lookup_global_var_l to avoid searching dynamic scope for
	lexicals which cannot be dynamically rebound.

	* share/txr/stdlib/ver.tl (lib-version): New global lexical variable.